[package]
name = "cluesum"
version = "0.1.0"
edition = "2021"
authors = ["Syed Lavzani <syed@riseup.net>", "Sergey Vasilyev <swasilyev@gmail.com>"]

[dependencies]
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }


avail-core = {  git = "https://github.com/availproject/avail-core", tag = "node-v2220-rc1", features = ["serde", "runtime"] }
avail-subxt = { git = "https://github.com/availproject/avail/" }
avail-base = {git = "https://github.com/availproject/avail/" }

subxt-signer = "0.34"
bip39 = { version = "2.0.0", default-features = false }
array-bytes = { version = "6.1" }

[dev-dependencies]
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
tokio = "*"
tokio-test = "*"
