[package]
name = "zkkrakow"
version = "0.1.0"
edition = "2021"
authors = ["Syed Lavzani <syed@riseup.net>", "Sergey Vasilyev <swasilyev@gmail.com>"]

[dependencies]
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }

[dev-dependencies]
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }